<resources>
    <string name="app_name">ShoeStore</string>
    <string name="menu_logout">Logout</string>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="something_one_com">something@one.com</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_login">Create new login</string>

    <!-- Welcome fragment-->
    <string name="welcome_title">Welcome to the Shoe Store Inventory App</string>
    <string name="welcome_message">Welcome to the Shoe Store Inventory App!\n\nWe\u0027re excited to have you on board! With the Shoe Store Inventory app, managing your shoe store\u0027s inventory has never been easier.\n\nOur app makes it simple to keep track of all your shoes, whether you have a small boutique or a large chain of stores. With features like easy shoe entry, editing, and filtering, you\u0027ll be able to organize your inventory in no time.\n\nWe understand that managing inventory can be a time-consuming and challenging process. That\u0027s why we created this app to help you save time and focus on growing your business.\n\nGet started today and see for yourself how the Shoe Store Inventory app can transform the way you manage your inventory.</string>
    <string name="welcome_button">Continue</string>

    <!-- Instructions fragment -->
    <string name="instruction_title">How to Use the Shoe List</string>
    <string name="instructions_message">Welcome to the Shoe Store Inventory app! With our app, you can easily manage your shoe inventory and keep track of all your stock in one place. Here\'s how to get started:\n\n1. To add a new shoe, simply tap the plus button at the bottom of the screen.\n\n2. This will take you to a new page where you can enter the details for your new shoe, including the name, size, description, and an optional icon.\n\n3. Once you\'ve entered all the information for your shoe, tap the save button to add it to your inventory.\n\n4. To edit or delete an existing shoe, simply tap on the shoe in the list and then tap the edit or delete button.\n\nThat\'s it! You\'re now ready to start managing your shoe inventory with ease. Tap the button below to get started!</string>
    <string name="instruction_button">Let\'s Get Started!</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="shoe_name">Shoe name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="plus_icon">Plus icon</string>

    <!-- Shoe Detail -->



</resources>
