<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textInstructionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/instruction_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/instructions_message"
            app:layout_constraintEnd_toEndOf="@+id/textInstructionTitle"
            app:layout_constraintStart_toStartOf="@+id/textInstructionTitle"
            app:layout_constraintTop_toBottomOf="@+id/textInstructionTitle" />

        <Button
            android:id="@+id/buttonInstructionToShoeList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/instruction_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInstructions"
            app:layout_constraintStart_toStartOf="@+id/textInstructions"
            app:layout_constraintTop_toBottomOf="@+id/textInstructions" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
